[gd_scene load_steps=28 format=3 uid="uid://dl60tvwy1elkf"]

[ext_resource type="Script" path="res://basic_player.gd" id="1_2u6ml"]
[ext_resource type="Script" path="res://MainPhoneNode.gd" id="2_x58fu"]
[ext_resource type="Script" path="res://Flashlight.gd" id="3_bpxil"]
[ext_resource type="AudioStream" uid="uid://d3s448a0plbr6" path="res://Flashlight Sound Effect sfx.mp3" id="4_8ypjy"]
[ext_resource type="Script" path="res://FlashlightAudioPlayer.gd" id="5_m0nnp"]
[ext_resource type="Texture2D" uid="uid://bdt3eychbninn" path="res://camOffIcon.png" id="6_k5v50"]
[ext_resource type="Script" path="res://PhoneCameraUpdate.gd" id="7_cs3jm"]
[ext_resource type="AudioStream" uid="uid://cf3ky2gprqugr" path="res://Concrete Footstep 1 SOUND Effect.mp3" id="8_hop3p"]
[ext_resource type="Script" path="res://FootstepAudioPlayer.gd" id="9_s5h13"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ni7be"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_kn71c"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mt81q"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_ju561"]

[sub_resource type="SphereMesh" id="SphereMesh_5e8e2"]

[sub_resource type="Animation" id="Animation_t2tbu"]
resource_name = "HidePhone"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PhoneNode:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.440142, -0.375938, -0.56255), Vector3(0.44, -1, -0.563)]
}

[sub_resource type="Animation" id="Animation_i3rst"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PhoneNode:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.440142, -0.375938, -0.56255)]
}

[sub_resource type="Animation" id="Animation_dfbam"]
resource_name = "ShowPhone"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PhoneNode:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.44, -1, -0.563), Vector3(0.44, -0.376, -0.563)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eq54l"]
_data = {
"HidePhone": SubResource("Animation_t2tbu"),
"RESET": SubResource("Animation_i3rst"),
"ShowPhone": SubResource("Animation_dfbam")
}

[sub_resource type="Animation" id="Animation_uydv3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_x1y7j"]
resource_name = "headbob"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1.43, 0), Vector3(0, 1.5, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HeadAnimationPlayer/FootstepAudioPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_play_footstep"
}]
}

[sub_resource type="Animation" id="Animation_4n2td"]
resource_name = "headbob_crouching"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.93, 0), Vector3(0, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.366667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, -0.00349066), Vector3(0, 0, 0.00349066)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HeadAnimationPlayer/FootstepAudioPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.233333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_play_footstep"
}]
}

[sub_resource type="Animation" id="Animation_fs0a7"]
resource_name = "headbob_sprinting"
length = 0.45
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1.43, 0), Vector3(0, 1.5, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HeadAnimationPlayer/FootstepAudioPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0666667, 0.366667),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_play_footstep"
}, {
"args": [],
"method": &"_play_footstep"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0.00872665), Vector3(0, 0, -0.00872665)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gl5o2"]
_data = {
"RESET": SubResource("Animation_uydv3"),
"headbob": SubResource("Animation_x1y7j"),
"headbob_crouching": SubResource("Animation_4n2td"),
"headbob_sprinting": SubResource("Animation_fs0a7")
}

[sub_resource type="Animation" id="Animation_m56i8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.0872665, 0, 0)]
}

[sub_resource type="Animation" id="Animation_i383i"]
resource_name = "crouch"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.533333, 0.733333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0349066, 0, 0.00523599), Vector3(-0.0174533, 0, -0.00174533), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_d5j1e"]
resource_name = "stand up"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.5, 2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 1.5, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.733333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0261799, 0, -0.00523599), Vector3(-0.0122173, 0, 0.00174533), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wpsm1"]
_data = {
"RESET": SubResource("Animation_m56i8"),
"crouch": SubResource("Animation_i383i"),
"stand": SubResource("Animation_d5j1e")
}

[node name="Protagonist" type="CharacterBody3D" node_paths=PackedStringArray("CAMERA_CONTROLLER", "CrouchCollisionDetect")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
script = ExtResource("1_2u6ml")
CAMERA_CONTROLLER = NodePath("CameraController/Camera3D")
CrouchCollisionDetect = NodePath("CollisionShape3D/CrouchCollisionShapeCast")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_ni7be")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0276853, 0)
mesh = SubResource("CapsuleMesh_kn71c")
surface_material_override/0 = SubResource("StandardMaterial3D_mt81q")

[node name="CrouchCollisionShapeCast" type="ShapeCast3D" parent="CollisionShape3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.447816, 0)
shape = SubResource("SphereShape3D_ju561")
target_position = Vector3(0, 0, 0)
debug_shape_custom_color = Color(1.29953e-06, 0.670053, 0.480873, 1)

[node name="CameraController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.996195, -0.0871558, 0, 0.0871558, 0.996195, 0, 1.5, 0)

[node name="Camera3D" type="Camera3D" parent="CameraController"]
cull_mask = 1047553

[node name="PhoneNode" type="Node3D" parent="CameraController/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.440142, -0.375938, -0.56255)
script = ExtResource("2_x58fu")

[node name="PhoneModel" type="MeshInstance3D" parent="CameraController/Camera3D/PhoneNode"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)
mesh = SubResource("SphereMesh_5e8e2")

[node name="SpotLight3D" type="SpotLight3D" parent="CameraController/Camera3D/PhoneNode"]
light_color = Color(0.997824, 1, 0.906135, 1)
light_energy = 0.0
light_indirect_energy = 0.0
distance_fade_enabled = true
distance_fade_begin = 20.0
distance_fade_length = 5.0
spot_range = 25.0
spot_attenuation = 0.81
spot_angle = 20.0
script = ExtResource("3_bpxil")

[node name="FlashlightClick" type="AudioStreamPlayer3D" parent="CameraController/Camera3D/PhoneNode/SpotLight3D"]
stream = ExtResource("4_8ypjy")
volume_db = -30.27
script = ExtResource("5_m0nnp")

[node name="BatteryBar" type="ProgressBar" parent="CameraController/Camera3D/PhoneNode"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.0
offset_top = 422.0
offset_right = 112.0
offset_bottom = 449.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.983317, 0.798216)
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 1
max_value = 1000.0
step = 1.0
value = 1000.0

[node name="PhoneAnimationPlayer" type="AnimationPlayer" parent="CameraController/Camera3D/PhoneNode"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_eq54l")
}

[node name="PhoneScreen" type="Sprite3D" parent="CameraController/Camera3D/PhoneNode"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)
double_sided = false
texture = ExtResource("6_k5v50")
region_enabled = true
region_rect = Rect2(80, 0, 344, 512)

[node name="SubViewport" type="SubViewport" parent="CameraController/Camera3D/PhoneNode" groups=["CameraViewport"]]
physics_interpolation_mode = 1
handle_input_locally = false
gui_disable_input = true
render_target_clear_mode = 1
render_target_update_mode = 4

[node name="PhoneCamera" type="Camera3D" parent="CameraController/Camera3D/PhoneNode/SubViewport"]
physics_interpolation_mode = 1
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.44, 1.04579, -0.563)
cull_mask = 1047553
fov = 50.0
script = ExtResource("7_cs3jm")

[node name="HeadAnimationPlayer" type="AnimationPlayer" parent="CameraController/Camera3D"]
libraries = {
"": SubResource("AnimationLibrary_gl5o2")
}

[node name="FootstepAudioPlayer" type="AudioStreamPlayer3D" parent="CameraController/Camera3D/HeadAnimationPlayer"]
transform = Transform3D(0.999991, 0.00418878, 0, -0.00418878, 0.999991, 0, 0, 0, 1, -0.00389556, -0.0299919, 0)
stream = ExtResource("8_hop3p")
volume_db = -17.042
script = ExtResource("9_s5h13")

[node name="BodyAnimationPlayer" type="AnimationPlayer" parent="CameraController"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_wpsm1")
}

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = 112.0
offset_top = 1011.0
offset_right = 1809.0
offset_bottom = 1038.0
max_value = 1000.0
value = 1000.0
